Fixed an issue that allowed the page to overflow the viewport.

--- a/src/index.css
+++ b/src/index.css
@@ -189,7 +189,7 @@ span {
 
 header + div:has(footer) {
 	min-height: calc(100vh - 22rem);
-	max-height: calc(100vh - 6rem);
+	max-height: calc(100vh - 6.5rem);
 	overflow-y: scroll;
 }
 
